--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Default ignored files
 /shelf/
 /.idea/workspace.xml
-/config.php
+/config.php/
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
